--- a/store/templates/store/userdashboard/loggedin.html
+++ b/store/templates/store/userdashboard/loggedin.html
@@ -524,7 +524,7 @@
 				<div class="col-md-6 col-xl-4 p-b-30 m-lr-auto">
 					<!-- Block1 -->
 					<div class="block1 wrap-pic-w ">
-						<img style="width:368px;height:350px;" class="" src="{{item.image.url}}" alt="IMG-BANNER">
+						<img style="object-fit:cover;width:368px;height:350px;" class="" src="{{item.image.url}}" alt="IMG-BANNER">
 
 						<a href={% url 'loggedincategory_based_product' item.id %} class="block1-txt ab-t-l s-full flex-col-l-sb p-lr-38 p-tb-34 trans-03 respon3">
 							<div class="block1-txt-child1 flex-col-l">
@@ -532,9 +532,9 @@
 									{{item.name}}
 								</span>
 
-								<span class="block1-info stext-102 trans-04">
+								{% comment %} <span class="block1-info stext-102 trans-04">
 									Latest Edition 2k23
-								</span>
+								</span> {% endcomment %}
 							</div>
 
 							<div class="block1-txt-child2 p-b-4 trans-05">
